[gd_scene load_steps=5 format=3 uid="uid://d3vrpqk33p1f3"]

[ext_resource type="Texture2D" uid="uid://skv5jf05mtuk" path="res://assets/sprites/neutral_cleaver.png" id="1_66mky"]
[ext_resource type="Script" path="res://scenes_and_controllers/cleaver_view.gd" id="1_u0t1m"]
[ext_resource type="Texture2D" uid="uid://cw6eifxsfsw7r" path="res://assets/sprites/cutting_cleaver.png" id="2_1sbid"]
[ext_resource type="Texture2D" uid="uid://by76yfyiiuig" path="res://assets/sprites/smear_cleaver2.png" id="4_16rha"]

[node name="CleaverView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0t1m")

[node name="NeutralCleaver" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1563, 624)
scale = Vector2(0.540807, 0.540807)
texture = ExtResource("1_66mky")

[node name="CuttingCleaver" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1200, 744)
scale = Vector2(0.520175, 0.520175)
texture = ExtResource("2_1sbid")

[node name="SmearCleaver" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1309.37, 511.655)
rotation = 0.172792
scale = Vector2(0.539142, 0.539142)
texture = ExtResource("4_16rha")
